# pkg/server/handler/favorites/create.go
@@ -1,4 +1,4 @@
-package favorite
+package favorites
 
 import (
 	"encoding/json"
